opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/base_quickcheck"
bug-reports: "https://github.com/janestreet/base_quickcheck/issues"
dev-repo: "git+https://github.com/janestreet/base_quickcheck.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_base"
  "ppx_fields_conv"
  "ppx_let"
  "ppx_sexp_message"
  "splittable_random"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.04.2" ]
descr: "
Randomized testing framework, designed for compatibility with Base

Base_quickcheck provides randomized testing in the style of Haskell's Quickcheck library,
with support for built-in types as well as types provided by Base.
"
