opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/base_quickcheck"
bug-reports: "https://github.com/janestreet/base_quickcheck/issues"
dev-repo: "git+https://github.com/janestreet/base_quickcheck.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/base_quickcheck/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_base"
  "ppx_fields_conv"
  "ppx_let"
  "ppx_sexp_message"
  "ppx_sexp_value"
  "ppx_shorthand"
  "ppx_template"
  "ppxlib_jane"
  "splittable_random"
  "dune"                {>= "3.17.0"}
  "ocaml-compiler-libs" {= "v0.17.0+jst"}
  "ppxlib"              {= "0.33.0+jst"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Randomized testing framework, designed for compatibility with Base"
description: "
Base_quickcheck provides randomized testing in the style of Haskell's Quickcheck library,
with support for built-in types as well as types provided by Base.
"
