(library
 (name ppx_quickcheck_expander)
 (public_name base_quickcheck.ppx_quickcheck.expander)
 (libraries base ocaml-compiler-libs.common compiler-libs.common ppx_template
   ppxlib ppxlib_jane)
 (ppx_runtime_libraries base_quickcheck.ppx_quickcheck.runtime
   base_quickcheck)
 (preprocess
  (pps ppxlib.metaquot)))
